feat: rewrite AiGenerationService with real LLM calls